2000-10-23  Diego Novillo  <dnovillo@cygnus.com>

	* config/i386/att.h (ASM_FILE_START): Define.

2000-10-23  Diego Novillo  <dnovillo@cygnus.com>

	* config/i386/linux.h (ASM_FILE_START): Define.

Wed Oct 18 11:16:40 2000  Donald Lindsay  <dlindsay@cygnus.com>

	* gcc/configure.in: m68k-coff tm_file should not have libgloss.h,
	since this (only) drags in a crt0.o reference that the .ld files
	also introduce.

2000-10-23  Geoff Keating  <geoffk@cygnus.com>

	* reload1.c (reload_reg_reaches_end_p): A RELOAD_OTHER can
	overwrite the value in a RELOAD_FOR_INPUT and other kinds of
	reloads just like an RELOAD_FOR_OUTPUT would.

	* local-alloc.c (update_equiv_regs): Add an abort().  When
	deleting or moving insns, update reg_equiv[regno].init_insns.

2000-10-23  Mark Mitchell  <mark@codesourcery.com>

	* c-tree.texi: Improve documentation for IF_STMTs and related
	conditional statements.

2000-10-22  Mark Mitchell  <mark@codesourcery.com>

	* expr.c (do_preexpand_calls): Remove.
	(same_from_p): Don't use CALL_EXPR_RTL.
	(expand_expr): Don't call preexpand_calls, or use CALL_EXPR_RTL.
	(preexpand_calls): Remove.
	* tree.c (first_rtl_op): Remove CALL_EXPR case.
	(unsave_expr_1): Likewise.
	* tree.def (CALL_EXPR): Give it only two slots.
	* tree.h (CALL_EXPR_RTL): Remove.

2000-10-21  Chandrakala Chavva   <cchavva@redhat.com>

	* libgcc-std.ver (__addvsi3, __addvdi3,  __subvsi3, __subvdi3,
        __mulvsi3, __negvsi2, __negvdi2, __absvsi2, __absvdi2, __mulvdi3):
        New functions.

2000-10-22  Alexandre Oliva  <aoliva@redhat.com>

	* calls.c (combine_pending_stack_adjustment_and_call): Don't
	adjust stack when unadjusted_alignment ends up as zero.

2000-10-22  Joseph S. Myers  <jsm28@cam.ac.uk>

	* fixinc/genfixes: Remove EGCS reference.
	* install.texi: Remove EGCS reference.
	* INSTALL: Regenerate.

2000-10-22  Mark Mitchell  <mark@codesourcery.com>

	* tree.h (TYPE_IS_SIZETYPE): Add more documentation.

2000-10-21  Joseph S. Myers  <jsm28@cam.ac.uk>
